--- a/BananaSmoothie.html
+++ b/BananaSmoothie.html
@@ -51,7 +51,7 @@
     <h1>Banana Smoothie</h1>
     <p>Bananas are a great choice for making homeade smoothies</p>
     <img 
-        src="https://www.simplyrecipes.com/thmb/THatR3pWM1ypgJZUxxhrPehJmUQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Simply-Recipes-Peanut-Butter-Banana-Smoothie-LEAD-2-36e57d61c34d40459fd1e76a86716539.jpg" 
+        src="Banana-Smoothie.png" 
         alt="Banana Smoothie"
         height="200px"      
         width="200px"  
